--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class="header">ну хэдер и хэдер</div>
+<div class="header"></div>
 <div class="sho">Дурак ты </div>
 </body>
 </html>
