--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <div class="header"></div>
 <div class="sho">Дурак ты </div>
+<div class="to"> net</div>
 <div class="footer"></div>
 </body>
 </html>
