--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class="header"></div>
-<div class="sho">Дурак ты </div>
-<div class="to"> net</div>
-<div class="footer"></div>
+<header></header>
+<body></body>
+<footer></footer>
 </body>
 </html>
