--- a/index.html
+++ b/index.html
@@ -9,8 +9,82 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<header></header>
-<body></body>
-<footer></footer>
+    <header>
+        <div class="header-container">
+
+        <div class="navbar">
+            <a href="index.html" class="navbar__logo">Madelyn Torff</a>
+
+            <div class="navbar__menu">
+                <a href="about/about.html">About</a>
+                <a href="#">Projects</a><
+                <a href="#">Contacts</a>
+            </div>
+        </div>
+
+        <div class="header-content">
+            <div class="header-content__subtitle">UI/UX Designer</div>
+            <h1 class="header-content__title">Hello,  my name is Madelyn Torff</h1>
+            <div class="header-content__text">Short text with details about you, what you do or your professional career. You can add more information on the about page.</div>
+            <div class="header-content__buttons">
+                <a class="common-button">Projects</a>
+                <a class="common-button common-button_light">LinkedIn</a>
+            </div>
+        </div>
+
+        </div>
+    </header>
+
+    <main>
+        <div class="projects-title">Projects</div>
+        <div class="project-card">
+            <div class="project-card__content">
+                <div class="project-card__title">Project Name</div>
+                <div class="project-card__text">I created this personal project in order to show how to create an interface in Figma using a portfolio as an example.</div>
+            <a href="#" class="project-card__button stylized-button">View Project</a>
+            </div>
+            <div class="project-card__picture">
+                <img src="img/card1.png" alt="">
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-card__picture">
+                <img src="img/card1.png" alt="">
+            </div>
+            <div class="project-card__content">
+                <div class="project-card__title">Project Name</div>
+                <div class="project-card__text">I created this personal project in order to show how to create an interface in Figma using a portfolio as an example.</div>
+                <a href="#" class="project-card__button stylized-button">View Project</a>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-card__content">
+                <div class="project-card__title">Project Name</div>
+                <div class="project-card__text">I created this personal project in order to show how to create an interface in Figma using a portfolio as an example.</div>
+                <a href="#" class="project-card__button stylized-button">View Project</a>
+            </div>
+            <div class="project-card__picture">
+                <img src="img/card1.png" alt="">
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="projects-title">Projects</div>
+        <form id="message-form" action="" class="message-form">
+            <label for="Name">Name
+            <input id="Name" type="text"></label>
+            <label for="Email">Email
+            <input id="Email" type="email"></label>
+            <label for="Message">Message
+            <input id="Message" type="text"></label>
+            <button for="message-form" type="submit" class="common-button">Send</button>
+        </form>
+        <div class="society">
+            <a href="#" class="society__item"></a>
+            <a href="#" class="society__item"></a>
+            <a href="#" class="society__item"></a>
+        </div>
+        <div class="some-text">Madelyn Torff 2021 </div>
+    </footer>
 </body>
 </html>
