--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito+Sans:opsz@6..12&family=Raleway:wght@500&family=Roboto:wght@500&display=swap" rel="stylesheet"><link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -17,7 +19,7 @@
 
             <div class="navbar__menu">
                 <a href="about/about.html">About</a>
-                <a href="#">Projects</a><
+                <a href="#">Projects</a>
                 <a href="#">Contacts</a>
             </div>
         </div>
@@ -72,17 +74,20 @@
         <div class="projects-title">Projects</div>
         <form id="message-form" action="" class="message-form">
             <label for="Name">Name
-            <input id="Name" type="text"></label>
+                <input id="Name" type="text">
+            </label>
             <label for="Email">Email
-            <input id="Email" type="email"></label>
+                <input id="Email" type="email">
+            </label>
             <label for="Message">Message
-            <input id="Message" type="text"></label>
+                <input id="Message" type="text" class="big-area">
+            </label>
             <button for="message-form" type="submit" class="common-button">Send</button>
         </form>
         <div class="society">
-            <a href="#" class="society__item"></a>
-            <a href="#" class="society__item"></a>
-            <a href="#" class="society__item"></a>
+            <a href="#" class="society__item society__item_ins "></a>
+            <a href="#" class="society__item society__item_lin"></a>
+            <a href="#" class="society__item society__item_mail"></a>
         </div>
         <div class="some-text">Madelyn Torff 2021 </div>
     </footer>
