--- a/about/about.html
+++ b/about/about.html
@@ -16,7 +16,7 @@
     <div class="header-container">
 
         <div class="navbar">
-            <a href="../index.html" class="navbar__logo">Madelyn Torff</a>
+            <a href="../index.html" class="navbar__logo">Sofi Zaderaco</a>
 
             <div class="navbar__menu">
                 <a href="about.html">About</a>
@@ -28,7 +28,7 @@
         <div class="header-content">
             <div class="header-content-container">
                 <h1 class="header-content__title">About me</h1>
-                <div class="header-content__text">Nisl arcu, scelerisque neque ut. Tincidunt amet, tempor duis tortor neque auctor dis ipsum. Pretium cras amet odio amet eleifend id sed cras sed. Aliquet risus posuere aliquet imperdiet sit.</div>
+                <div class="header-content__text">Now I am a 2nd year student at the best RUDN University, I am just learning to be a designer, but I am sure that I will become the best</div>
                 <div class="header-content__buttons">
                     <a class="common-button">Projects</a>
                 </div>
@@ -53,11 +53,10 @@
         <button for="message-form" type="submit" class="common-button">Send</button>
     </form>
     <div class="society">
-        <a href="#" class="society__item society__item_ins "></a>
-        <a href="#" class="society__item society__item_lin"></a>
-        <a href="#" class="society__item society__item_mail"></a>
+        <a href="https://www.instagram.com/zaderakos" class="society__item society__item_ins "></a>
+        <a href="https://t.me/artzaderako" class="society__item society__item_lin"></a>
     </div>
-    <div class="some-text">Madelyn Torff 2021 </div>
+    <div class="some-text">Sofi Zaderaco 2023 </div>
 </footer>
 </body>
 </html>
