--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-container">
 
         <div class="navbar">
-            <a href="index.html" class="navbar__logo">Madelyn Torff</a>
+            <a href="index.html" class="navbar__logo">Sofi Zaderaco</a>
 
             <div class="navbar__menu">
                 <a href="about/about.html">About</a>
@@ -26,8 +26,8 @@
 
         <div class="header-content">
             <div class="header-content__subtitle">UI/UX Designer</div>
-            <h1 class="header-content__title">Hello,  my name is Madelyn Torff</h1>
-            <div class="header-content__text">Short text with details about you, what you do or your professional career. You can add more information on the about page.</div>
+            <h1 class="header-content__title">Hello,  my name is Sonya</h1>
+            <div class="header-content__text">Hello everyone My name is Sonya, I am 21 years old and I study at the best university in the world RUDN.</div>
             <div class="header-content__buttons">
                 <a class="common-button">Projects</a>
                 <a class="common-button common-button_light">LinkedIn</a>
@@ -41,32 +41,32 @@
         <div class="projects-title">Projects</div>
         <div class="project-card">
             <div class="project-card__content">
-                <div class="project-card__title">Project Name</div>
-                <div class="project-card__text">I created this personal project in order to show how to create an interface in Figma using a portfolio as an example.</div>
+                <div class="project-card__title">Travel</div>
+                <div class="project-card__text">I created this project to talk about my travels and the countries that I managed to visit</div>
             <a href="#" class="project-card__button stylized-button">View Project</a>
             </div>
             <div class="project-card__picture">
-                <img src="img/card1.png" alt="">
+                <img src="img/pexels-elly-fairytale-3823207%201_card1.png" alt="">
             </div>
         </div>
         <div class="project-card">
             <div class="project-card__picture">
-                <img src="img/card1.png" alt="">
+                <img src="img/Rectangle%207_card2.png" alt="">
             </div>
             <div class="project-card__content">
-                <div class="project-card__title">Project Name</div>
-                <div class="project-card__text">I created this personal project in order to show how to create an interface in Figma using a portfolio as an example.</div>
+                <div class="project-card__title">Sport</div>
+                <div class="project-card__text">I really love sports and I want to share it with people</div>
                 <a href="#" class="project-card__button stylized-button">View Project</a>
             </div>
         </div>
         <div class="project-card">
             <div class="project-card__content">
-                <div class="project-card__title">Project Name</div>
-                <div class="project-card__text">I created this personal project in order to show how to create an interface in Figma using a portfolio as an example.</div>
+                <div class="project-card__title">Learning</div>
+                <div class="project-card__text">Everyone needs support in such a difficult task as studying, here you can find it</div>
                 <a href="#" class="project-card__button stylized-button">View Project</a>
             </div>
             <div class="project-card__picture">
-                <img src="img/card1.png" alt="">
+                <img src="img/Rectangle%207_card3.png" alt="">
             </div>
         </div>
     </main>
@@ -85,11 +85,10 @@
             <button for="message-form" type="submit" class="common-button">Send</button>
         </form>
         <div class="society">
-            <a href="#" class="society__item society__item_ins "></a>
-            <a href="#" class="society__item society__item_lin"></a>
-            <a href="#" class="society__item society__item_mail"></a>
+            <a href="https://www.instagram.com/zaderakos" class="society__item society__item_ins "></a>
+            <a href="https://t.me/artzaderako" class="society__item society__item_lin"></a>
         </div>
-        <div class="some-text">Madelyn Torff 2021 </div>
+        <div class="some-text">Sofi Zaderaco 2023 </div>
     </footer>
 </body>
 </html>
