--- a/about/about.html
+++ b/about/about.html
@@ -16,7 +16,7 @@
     <div class="header-container">
 
         <div class="navbar">
-            <a href="../index.html" class="navbar__logo">Sofi Zaderaco</a>
+            <a href="../index.html" class="navbar__logo">Sofi Zaderako</a>
 
             <div class="navbar__menu">
                 <a href="about.html">About</a>
@@ -56,7 +56,7 @@
         <a href="https://www.instagram.com/zaderakos" class="society__item society__item_ins "></a>
         <a href="https://t.me/artzaderako" class="society__item society__item_lin"></a>
     </div>
-    <div class="some-text">Sofi Zaderaco 2023 </div>
+    <div class="some-text">Sofi Zaderako 2023 </div>
 </footer>
 </body>
 </html>
