--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-container">
 
         <div class="navbar">
-            <a href="index.html" class="navbar__logo">Sofi Zaderaco</a>
+            <a href="index.html" class="navbar__logo">Sofi Zaderako</a>
 
             <div class="navbar__menu">
                 <a href="about/about.html">About</a>
@@ -88,7 +88,7 @@
             <a href="https://www.instagram.com/zaderakos" class="society__item society__item_ins "></a>
             <a href="https://t.me/artzaderako" class="society__item society__item_lin"></a>
         </div>
-        <div class="some-text">Sofi Zaderaco 2023 </div>
+        <div class="some-text">Sofi Zaderako 2023 </div>
     </footer>
 </body>
 </html>
